--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.13",
     "nodemon": "^3.1.1",
-    "react-scripts": "^5.0.1"
+    "otp-generator": "^4.0.1",
+    "react-scripts": "^5.0.1",
+    "twilio": "^5.3.5"
   }
 }
